feat : 기술스택 페이지 레이아웃 구성

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,6 +23,7 @@
 }
 
 body {
+  box-sizing: border-box;
   color: var(--color-main-001);
   background: linear-gradient(to bottom, transparent, var(--color-main-004))
     var(--color-main-003);
