feat : 기술스택페이지 높이 설정 변경

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,7 +23,9 @@
 }
 
 body {
-  box-sizing: border-box;
+  height: 100%;
+  margin: 0;
+  padding: 0;
   color: var(--color-main-001);
   background: linear-gradient(to bottom, transparent, var(--color-main-004))
     var(--color-main-003);
